# mii-text

./: .gitignore  Cargo.toml  LICENSE  README.md  specs.contraints.md  specs.md
.github/workflows/: release.yml
src/: args.rs  cache.rs  client.rs  constraints.rs  conversation.rs  ipc.rs  main.rs  output.rs  server.rs  sink.rs  stats.rs  tools.rs
src/providers/: chat.rs  mod.rs  responses.rs
