[package]
name = "mii-text"
version = "0.1.0"
edition = "2024"
description = "A small, unix-friendly CLI for talking to OpenAI-compatible LLM APIs."
license = "BSD-3-Clause"
repository = "https://github.com/nipah/mii-text"
readme = "README.md"

[dependencies]
async-openai = { version = "0.36.0", default-features = false, features = ["rustls", "byot", "chat-completion", "responses"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
interprocess = { version = "2.4", features = ["tokio"] }
